# template_web_app

./: .dockerignore  .env.tests  .gitignore  .pre-commit-config.yaml  AGENTS.md  Caddyfile  Dockerfile  Dockerfile.caddy  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.devcontainer.yml  post-create.sh
.github/workflows/: backend_ci.yml  backend_security.yml  frontend_ci.yml  frontend_security.yml
app/: manage.py
app/app/: __init__.py  app_settings.py  asgi.py  celery.py  settings.py  urls.py  utils.py  wsgi.py
app/appauth/: api.py  middleware.py
app/appauth/migrations/: 0001_initial.py
app/appauth/models/: __init__.py  token.py
app/appauth/modules/: auth.py  auth_rate_limit.py  google_auth.py  token.py
app/appauth/routes/: token.py
app/appauth/serializers/: __init__.py  token.py
app/appauth/tests/: test_api_router.py  test_auth_module.py  test_auth_rate_limit_module.py  test_google_auth_module.py  test_token_model.py  test_token_module.py  test_token_routes.py
app/appcore/modules/: beartype.py  redis_client.py
app/appcore/tests/: test_modules.py
app/appsearch/tests/: test_search_dsl.py  test_search_service.py  test_upsert_and_client.py
app/appuser/: api.py
frontend/: .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  TESTING.md  TESTING_E2E.md  bun.lockb  eslint.config.mjs  next.config.js  package.json  playwright.config.ts  postcss.config.js  proxy.test.ts  proxy.ts  tailwind.config.js  vitest.config.ts  vitest.setup.ts
frontend/app/: layout.test.tsx  layout.tsx  page.test.tsx  page.tsx  providers.test.tsx  providers.tsx
frontend/components/: legal-footer.tsx
frontend/lib/: auth.test.ts  auth.ts  avatar.test.ts  avatar.ts  backend-auth.test.ts  backend-auth.ts  utils.test.ts  utils.ts
frontend/types/: next-auth.d.ts
(+42 files in other folders)
